@@ -74,6 +74,10 @@ enum mpd_tag_type
 	MPD_TAG_LABEL,
 	MPD_TAG_MUSICBRAINZ_WORKID,
 
+	MPD_TAG_GROUPING,
+	MPD_TAG_WORK,
+	MPD_TAG_CONDUCTOR,
+
 	/* IMPORTANT: the ordering of tag types above must be
 	   retained, or else the libmpdclient ABI breaks */
 
