@@ -2,7 +2,8 @@ libmpdclient 2.17 (not yet released)
 * search: add mpd_search_add_db_songs_to_playlist()
 * support MPD protocol 0.22
   - "getfingerprint"
-* support tag "MPD_TAG_LABEL" and "MPD_TAG_MUSICBRAINZ_WORKID"
+* support tags "MPD_TAG_LABEL", "MPD_TAG_MUSICBRAINZ_WORKID", "Grouping",
+  "Work", "Conductor"
 * mpd_async_set_keepalive() returns bool
 * mpd_connection_set_keepalive() returns bool
 * fix build failure on Haiku
